--- a/css/main2.css
+++ b/css/main2.css
@@ -69,7 +69,7 @@ body {
     height: 50px;
 }
 
-.navcontainer {
+#navcontainer {
       width: 100%;
       float: right;
       margin: 0 0 3em 0;
@@ -79,17 +79,18 @@ body {
       border-top: 1px solid #ccc;
       list-style:none;
       overflow: hidden;
+      clear: both;
       }
-.navcontainer li {
+#navcontainer li {
       float: right; }
-.navcontainer li a {
+#navcontainer li a {
       display: block;
       padding: 8px 15px;
       text-decoration: none;
       font-weight: bold;
       color: #069;
       border-right: 1px solid #ccc; }
-.navcontainer li a:hover {
+#navcontainer li a:hover {
       color: #c00;
       background-color: #fff; }
 
@@ -117,7 +118,6 @@ body {
 
 .main_sub{
     float: left;
-    width: 100%;
     margin: 4% 4% 4% 0;
     min-height: 400px;
     padding: 10px;
@@ -129,14 +129,22 @@ body {
   background-color: white;
   float: right;
   padding: 10px;
+}
+#rhs_sub{
+  border: 1px black;
+  float: right;
+  width: 300px;
+  padding: 10px;
+}
 
-.footer{
+#footer{
     border: 2px solid black;
-    clear: left;
+    clear: both;
     overflow: hidden;
     text-align: center;
     padding: 10px;
     margin-top: 10px;
+    background-color: #00CCCC;
 }
 
 
@@ -341,6 +349,19 @@ textarea {
             }
 
 @media screen and (max-width: 480px) {
+#left-column {float: none; width: auto;}
+#main-column {float: none; width: auto;}
+#right-column {float: none; width: auto;}
+        }
+}
+
+@media screen and (max-width: 768px) {
+#headernav { float: none; width: auto;}
+#navigation li { float: none; margin-bottom: 4px; margin-left: 0; }
+#body { width: auto; margin-right: 0; margin-top: 0; min-height: 200px;}
+            }
+
+@media screen and (max-width: 768px) {
 #left-column {float: none; width: auto;}
 #main-column {float: none; width: auto;}
 #right-column {float: none; width: auto;}
