Fixed Responsive Box
Inline styles for box slider; updated navigation

--- a/css/main2.css
+++ b/css/main2.css
@@ -43,7 +43,8 @@ html {
 }
 
 body {
-    background-color: white;
+  background-image: url(img/download.png);
+  background-repeat:repeat;
     font-size: 11px; 
     font-family: "Lucida Grande", Arial, Verdana; 
     line-height: 14px; 
@@ -106,6 +107,10 @@ body {
 .main {
     clear: left;
     width: 100%;
+}
+
+.bxslider {
+    width: 67%;
 }
 
 .main .box {
