--- a/css/main2.css
+++ b/css/main2.css
@@ -122,7 +122,7 @@ body {
 
 .main_sub{
     float: left;
-    margin: 4% 4% 4% 0;
+    margin: 0 4% 4% 0;
     min-height: 400px;
     padding: 10px;
 }
